# X-Diff

./: .gitignore  AGENTS.md  CHANGELOG.md  CHANGES.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: publish.yml  release-changelog.yml  tests.yml
changes.d/: +coordinate-value-comparison.bugfix.md  +dask-files.feature.md  +drop-python-314-support.bugfix.md  +final-report-summary.feature.md  +live-progress.feature.md  +live-result-lines.feature.md  +pypi-name.misc.md  +remove-execution-mode.feature.md  +rename-subcommands.feature.md  +uv-migration.misc.md  .gitignore  14.misc.md  15.bugfix.md  15.dask-files.feature.md  15.feature.md  15.misc.md  16.feature.md  18.bugfix.md  19.misc.md  20.feature.md  20.misc.md  21.bugfix.md  22.bugfix.md  23.feature.md  24.feature.md  25.doc.md  26.feature.md  27.bugfix.md  27.feature.md  27.misc.md
docs/: custom-comparators.md  dask.md  plot-diff-plan.md
nccompare/: __init__.py
nccompare/comparators/: __init__.py  base.py  netcdf.py
nccompare/compare/: __init__.py  ncdiff.py
nccompare/conf/: __init__.py
nccompare/core/: __init__.py  main.py  service.py
nccompare/discovery/: __init__.py  filesystem.py
nccompare/exceptions/: __init__.py
nccompare/management/: __init__.py  cli.py
nccompare/matching/: __init__.py  default.py
nccompare/model/: __init__.py  comparison.py  match.py  report.py  request.py
nccompare/printlib/: __init__.py  formatter.py
nccompare/utils/: module_loading.py  regex.py
newsfragments/: +towncrier.misc.md  .gitignore
tests/: test_bbox.py  test_cli.py  test_dask_runtime.py  test_formatter.py  test_lazy_imports.py  test_main.py  test_management.py  test_models.py  test_ncdiff.py  test_plotting.py  test_progress.py  test_regex.py  test_request.py  test_service.py  test_setup.py
xdiff/: __init__.py
xdiff/comparators/: __init__.py  base.py  netcdf.py
xdiff/compare/: __init__.py  ncdiff.py
xdiff/conf/: __init__.py  global_settings.py
xdiff/core/: __init__.py  dask_runtime.py  main.py  service.py
xdiff/discovery/: __init__.py  filesystem.py
xdiff/exceptions/: __init__.py  no_match.py  unsupported_artifact.py
xdiff/management/: __init__.py  cli.py
xdiff/matching/: __init__.py  default.py
xdiff/model/: __init__.py  artifact.py  bbox.py  compare_result.py  comparison.py  match.py  report.py  request.py
xdiff/plotting/: __init__.py  spec.py
xdiff/plotting/renderers/: __init__.py  matplotlib_renderer.py  server.py
xdiff/printlib/: __init__.py  formatter.py  progress.py
xdiff/utils/: log.py  module_loading.py  regex.py
