[tool.poetry]
name = "xdiff"
version = "0.2.6"
description = "netCDF Comparison Tool"
authors = ["Antonio Mariani <antonio.mariani@cmcc.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
xarray = "^2024.6.0"
pandas = "^2.2.2"
netcdf4 = "^1.7.1"
rich = "^13.7.1"
click = "^8.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-cov = "^5.0"
towncrier = "^25.8"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:numpy.ndarray size changed, may indicate binary incompatibility.*:RuntimeWarning",
]

[tool.coverage.run]
source = ["xdiff"]

[tool.coverage.report]
show_missing = true

[tool.towncrier]
directory = "changes.d"
name = "X-Diff"
package = "xdiff"
filename = "CHANGES.md"
start_string = "<!-- towncrier release notes start -->\n"
title_format = "## __[xdiff-{version}](https://github.com/anto6715/X-Diff/tree/{version}) - {project_date}__"
issue_format = "[#{issue}](https://github.com/anto6715/X-Diff/pull/{issue})"
underlines = ["", "", ""]
template = "changes.d/changelog_template.jinja"
changelog_format = "markdown"

[[tool.towncrier.type]]
directory = "feature"
name = "🚀 Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "🔧 Bugfixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellaneous"
showcontent = true


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
xdiff = "xdiff.management:start_from_command_line_interface"
