[project]
name = "xdiffly"
version = "0.3.0"
description = "X-Diff: a general-purpose tool for exploring differences between datasets (netCDF today, more targets to come)"
authors = [
    {name = "Antonio Mariani", email = "antonio.mariani@cmcc.it"}
]
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "xarray>=2024.6.0,<2025.0.0",
    "pandas>=2.2.2,<3.0.0",
    "netcdf4>=1.7.1,<2.0.0",
    "rich>=13.7.1,<14.0.0",
    "click>=8.3.1,<9.0.0",
    "dask>=2024.6.0,<2025.0.0",
    "distributed>=2024.6.0,<2025.0.0",
    "bokeh>=3.1.0,<4.0.0",
]

[project.urls]
Homepage = "https://github.com/anto6715/X-Diff"
Repository = "https://github.com/anto6715/X-Diff"
Issues = "https://github.com/anto6715/X-Diff/issues"
Changelog = "https://github.com/anto6715/X-Diff/blob/master/CHANGES.md"

[project.scripts]
xdiff = "xdiff.management:start_from_command_line_interface"

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0.0",
    "pytest-cov>=5.0,<6.0.0",
    "towncrier>=25.8,<26.0.0",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "xdiff"
module-root = ""

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:numpy.ndarray size changed, may indicate binary incompatibility.*:RuntimeWarning",
]

[tool.coverage.run]
source = ["xdiff"]

[tool.coverage.report]
show_missing = true

[tool.towncrier]
directory = "changes.d"
name = "X-Diff"
package = "xdiff"
filename = "CHANGES.md"
start_string = "<!-- towncrier release notes start -->\n"
title_format = "## __[xdiff-{version}](https://github.com/anto6715/X-Diff/tree/{version}) - {project_date}__"
issue_format = "[#{issue}](https://github.com/anto6715/X-Diff/pull/{issue})"
underlines = ["", "", ""]
template = "changes.d/changelog_template.jinja"
changelog_format = "markdown"

[[tool.towncrier.type]]
directory = "feature"
name = "🚀 Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "🔧 Bugfixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellaneous"
showcontent = true
