[project]
name = "xdiffly"
version = "0.3.1"
description = "X-Diff: a general-purpose tool for exploring differences between datasets (netCDF today, more targets to come)"
authors = [
    {name = "Antonio Mariani", email = "antonio.mariani@cmcc.it"}
]
readme = "README.md"
requires-python = ">=3.10,<3.15"
dependencies = [
    "xarray>=2024.6.0,<2025.0.0",
    "pandas>=2.2.2,<3.0.0",
    "netcdf4>=1.7.1,<2.0.0",
    "rich>=13.7.1,<14.0.0",
    "click>=8.3.1,<9.0.0",
]

[project.optional-dependencies]
# Parallel execution backend. Only required for `-w/--dask-workers` and the
# external-scheduler options; the default serial path never imports these.
dask = [
    "dask>=2024.6.0,<2025.0.0",
    "distributed>=2024.6.0,<2025.0.0",
    "bokeh>=3.1.0,<4.0.0",
]
# Plotting backends. Only required for the `plot` subcommand; imported lazily.
# Static rendering (`-o`) uses matplotlib + cartopy; the live interactive server (no `-o`)
# uses holoviews/geoviews/panel over Bokeh with datashader. cartopy/geoviews add
# coastlines and filled land; they fetch Natural Earth data on first use, so a fully
# offline node degrades to a plain lon/lat map (see the renderers' fallbacks).
plot = [
    "matplotlib>=3.8.0,<4.0.0",
    "holoviews>=1.18.0,<2.0.0",
    "panel>=1.4.0,<2.0.0",
    "bokeh>=3.1.0,<4.0.0",
    "datashader>=0.16.0,<0.19.0",
    "cartopy>=0.22.0,<0.26.0",
    "geoviews>=1.11.0,<1.15.0",
]

[project.urls]
Homepage = "https://github.com/anto6715/X-Diff"
Repository = "https://github.com/anto6715/X-Diff"
Issues = "https://github.com/anto6715/X-Diff/issues"
Changelog = "https://github.com/anto6715/X-Diff/blob/master/CHANGES.md"

[project.scripts]
xdiff = "xdiff.management:start_from_command_line_interface"

[dependency-groups]
dev = [
    "pytest>=8.0,<9.0.0",
    "pytest-cov>=5.0,<6.0.0",
    "towncrier>=25.8,<26.0.0",
    "ruff>=0.14.0,<0.15.0",
    # Pull the optional Dask backend so its tests run in dev/CI.
    "xdiffly[dask]",
    # Pull the optional plotting backend so its tests run in dev/CI.
    "xdiffly[plot]",
]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "xdiff"
module-root = ""

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
# E/W: pycodestyle, F: pyflakes, I: isort, UP: pyupgrade, B: bugbear.
select = ["E", "W", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:numpy.ndarray size changed, may indicate binary incompatibility.*:RuntimeWarning",
    # Panel <2.0 still accepts `name=` on widgets; keep it for compatibility across the
    # pinned range and quiet the pending-deprecation notice the plotting tests surface.
    "ignore:Widget.name is deprecated.*:PendingDeprecationWarning",
    # Emitted by tornado/bokeh server internals during the served-dashboard test.
    "ignore:There is no current event loop.*:DeprecationWarning",
    # datashader imports dask.dataframe, which warns about query planning; irrelevant here.
    "ignore::FutureWarning:dask.dataframe",
]

[tool.coverage.run]
source = ["xdiff"]

[tool.coverage.report]
show_missing = true

[tool.towncrier]
directory = "changes.d"
name = "X-Diff"
package = "xdiff"
filename = "CHANGES.md"
start_string = "<!-- towncrier release notes start -->\n"
title_format = "## __[xdiff-{version}](https://github.com/anto6715/X-Diff/tree/{version}) - {project_date}__"
issue_format = "[#{issue}](https://github.com/anto6715/X-Diff/pull/{issue})"
underlines = ["", "", ""]
template = "changes.d/changelog_template.jinja"
changelog_format = "markdown"

[[tool.towncrier.type]]
directory = "feature"
name = "🚀 Features"
showcontent = true

[[tool.towncrier.type]]
directory = "bugfix"
name = "🔧 Bugfixes"
showcontent = true

[[tool.towncrier.type]]
directory = "doc"
name = "Documentation"
showcontent = true

[[tool.towncrier.type]]
directory = "misc"
name = "Miscellaneous"
showcontent = true
